# Reyes_Soft_Rasterizer

./: CMakeLists.txt  README.md  all_tests.cpp  all_tests.hpp  basic_shadow.cpp  earth.cpp  main.cpp  nested_transform.cpp  shader_test.cpp  simple_mapping.cpp  snowman.cpp  snowman_Ri.cpp  tornado.cpp  transparency_test.cpp  tunnel.cpp  unit_test.cpp  unit_test.hpp
base/: SceneManager.hpp  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  light.cpp  light.hpp  material.hpp  mesh.hpp  object3D.cpp  object3D.hpp  primitive.cpp  primitive.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
tests/: CMakeLists.txt  basic_shadow.hpp  earth.hpp  framebuffer_test.cpp  sampleScene.cpp  shader_test.hpp  snowman.hpp  snowman_Ri.hpp  tornado.hpp  transparency_test.hpp  tunnel.hpp
utils/: Rheader.hpp  matrix.hpp  pattern.hpp  quat.hpp  transformations.hpp  utility.hpp
